# UniversalDeepResearch

./: README.md
backend/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.txt  README.md  clients.py  config.py  env.example  insert_license.py  items.py  launch_server.sh  main.py  pyproject.toml  requirements.txt  scan_research.py  scan_research_dry.py  sessions.py  setup.py
backend/frame/: clients.py  errands4.py  harness4.py  routines.py  tidings.py  trace.py
backend/frame/errands/: message_code_call.txt  message_code_processing.txt  message_code_skill_processing.txt  message_code_variables.txt  message_data_processing.txt  message_generating_routine_call.txt  message_generating_routine_processing.txt  message_routine_processing.txt  message_routine_variables.txt  message_type.txt
backend/frame/prompts/udr_minimal/: 0.code_skill.py  1.code_skill.py  2.auto.txt  3.auto.txt
backend/frame/prompts/udr_minimal_generating/: 2.routine_generating.txt
frontend/: .gitignore  CONTRIBUTING.md  README.md  env.example  launch_server.sh  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: PromptBar.module.css  PromptBar.tsx  PromptBarButton.module.css  PromptBarButton.tsx  ReportViewer.module.css  ReportViewer.tsx  ResearchProgressFooter.module.css  ResearchProgressFooter.tsx  ResearchProgressHeader.module.css  ResearchProgressHeader.tsx  ResearchProgressItem.module.css  ResearchProgressItem.tsx  ResearchProgressList.module.css  ResearchProgressList.tsx  ResearchStrategyEditor.module.css  (+3 more)
(+2 files in other folders)
