[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "attr>=0.3.2",
    "datasets>=4.0.0",
    "docstring-parser>=0.17.0",
    "evaluate>=0.4.5",
    "fastapi>=0.116.1",
    "openai==1.65.1",
    "python-dotenv>=1.1.1",
    "tavily-python>=0.7.11",
    "transformers>=4.56.1",
    "uvicorn>=0.35.0",
]
